<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:weightSum="1"
    android:scrollIndicators="none">

    <Button
        android:id="@+id/button_check"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_check"
        android:onClick="onButtonCheckRedirectsClick" />

    <Button
        android:id="@+id/button_disable_actual_redirect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_disable_actual_redir"
        android:onClick="cancelActualRedirect" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_run"
        android:onClick="startAlarm"
        android:textColor="#f21515" />

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"
        android:onClick="cancelAlarm" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelPnPt19"
        android:id="@+id/label_pn_pt19"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/editTextHour1"
            android:text="19"
            android:maxLength="2"
            android:numeric="integer"
            android:layout_gravity="center_horizontal"
            android:lines="1"
            android:singleLine="true"
            android:textAlignment="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phone1"
            android:layout_gravity="center_horizontal"
            android:maxLength="9"
            android:textAlignment="center"
            android:singleLine="true" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/labelPnPt8"
        android:id="@+id/label_pn_pt_8"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/editTextHour2"
            android:text="8"
            android:numeric="integer"
            android:maxLength="2"
            android:textAlignment="center"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phone2"
            android:layout_gravity="center_horizontal"
            android:maxLength="9"
            android:textAlignment="center"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:id="@+id/button_save"
        android:layout_gravity="center_horizontal"
        android:onClick="onButtonSaveClick" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/readme"
        android:text="@string/readme" />

</LinearLayout>
</ScrollView>
